--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.5",
+    "axios": "^1.8.4",
     "date-fns": "^3.3.1",
     "framer-motion": "^12.4.4",
     "lucide-react": "^0.344.0",
